objects/Passenger__c.object
<CustomObject>
    <description>to capture the Passenger details</description>
    <fields>
        <fullName>Booking__c</fullName>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Passengers</relationshipLabel>
        <relationshipName>Passengers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone_Type__c</fullName>
        <label>Home Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Landline</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone/ Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone/ Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Passenger_Id__c</fullName>
        <externalId>true</externalId>
        <label>Passenger Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Name__c</fullName>
        <formula>BLANKVALUE(Name, &apos;&apos;) &amp; IF(ISBLANK(Name),&apos;&apos;,&apos; &apos;) &amp; BLANKVALUE(Middle_Name__c, &apos;&apos;) &amp; IF(ISBLANK(Middle_Name__c),&apos;&apos;,&apos; &apos;) &amp; BLANKVALUE(Last_Name__c, &apos;&apos;)</formula>
        <label>Passenger Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Status__c</fullName>
        <description>to identify deleted passenger</description>
        <label>Passenger Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active and Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resident_Country__c</fullName>
        <label>Resident Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone/ Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <label>Passenger</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>Gender__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passengers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Home_Phone_Flag_mandatory</fullName>
        <active>true</active>
        <description>Home Phone type is mandatory if Home Phone is not blank</description>
        <errorConditionFormula>AND(
NOT(ISBLANK( Home_Phone__c )), 
ISBLANK( TEXT( Home_Phone_Type__c ) ) 
)</errorConditionFormula>
        <errorDisplayField>Home_Phone_Type__c</errorDisplayField>
        <errorMessage>Please select Home Phone Type</errorMessage>
    </validationRules>
</CustomObject>